--- a/index.html
+++ b/index.html
@@ -460,6 +460,40 @@
         </div>
       </section>
 
+    <!-- FAQ Section -->
+    <section class="section" id="faq">
+        <div class="container container-narrow">
+            <div class="section-header">
+                <h2 class="section-title">Preguntas <span class="text-gradient">Frecuentes</span></h2>
+                <p class="section-subtitle">
+                    Resolvemos tus dudas más comunes sobre nuestros servicios.
+                </p>
+            </div>
+    
+            <div class="faq-list">
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false">
+                        <span>¿Ofrecen hosting en El Salvador?</span>
+                        <i data-lucide="chevron-down" class="faq-icon"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Sí, ofrecemos hosting profesional optimizado para empresas y emprendedores en El Salvador.</p>
+                    </div>
+                </div>
+    
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false">
+                        <span>¿Incluyen dominio y correo empresarial?</span>
+                        <i data-lucide="chevron-down" class="faq-icon"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Sí, ofrecemos registro de dominios y correos empresariales con dominio propio.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
       <!-- Contact Section -->
       <section class="section" id="contacto">
         <div class="container">
@@ -496,10 +530,9 @@
                   <div>
                     <p class="contact-item-label">WhatsApp</p>
                     <a
-                      href="https://wa.me/50312345678"
-                      class="contact-item-value"
-                      >+503 1234-5678</a
-                    >
+                      href="https://wa.me/+50377926261"
+                      class="contact-item-value" target="_blank" rel="noopener"
+                      >+503 7792-6261</a>
                   </div>
                 </div>
 
@@ -572,15 +605,7 @@
           </div>
         </div>
       </section>
-    </main>
 
-    <section class="sr-only" >
-        <h2>Preguntas frecuentes</h2>
-        <p><strong>¿Ofrecen hosting en El Salvador?</strong> Sí, ofrecemos hosting profesional optimizado para empresas y
-            emprendedores en El Salvador.</p>
-        <p><strong>¿Incluyen dominio y correo empresarial?</strong> Sí, ofrecemos registro de dominios y correos
-            empresariales con dominio propio.</p>
-    </section>
 
     <!-- Footer -->
     <footer class="footer">
