--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Dev Domain Masters | Hosting, Dominios y Desarrollo Web en El Salvador
+      Hosting Profesional en El Salvador | Dev Domain Masters
     </title>
     <meta
       name="description"
