adding links hosting from index

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
         <nav class="nav-desktop" aria-label="Navegación principal">
           <a href="#servicios" class="nav-link">Servicios</a>
+          <a href="hosting.html" class="nav-link">Hosting</a>
           <a href="#propuesta" class="nav-link">Por qué elegirnos</a>
           <a href="#proceso" class="nav-link">Proceso</a>
           <a href="#nosotros" class="nav-link">Nosotros</a>
@@ -113,6 +114,7 @@
       >
         <div class="container">
           <a href="#servicios" class="nav-link-mobile">Servicios</a>
+          <a href="hosting.html" class="nav-link">Hosting</a>
           <a href="#propuesta" class="nav-link-mobile">Por qué elegirnos</a>
           <a href="#proceso" class="nav-link-mobile">Proceso</a>
           <a href="#nosotros" class="nav-link-mobile">Nosotros</a>
@@ -187,6 +189,7 @@
           </div>
 
           <div class="services-grid">
+          <a href="hosting.html" class="withouta">
             <article class="service-card">
               <div class="service-icon">
                 <i data-lucide="server"></i>
@@ -197,6 +200,7 @@
                 panel de control intuitivo. Tu sitio siempre rápido y seguro.
               </p>
             </article>
+            </a>
 
             <article class="service-card">
               <div class="service-icon">
