--- a/hosting.html
+++ b/hosting.html
@@ -92,7 +92,7 @@
                         Solicitar cotización
                         <i data-lucide="arrow-right"></i>
                     </a>
-                    <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer"
+                    <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer"
                         class="btn btn-outline btn-lg">
                         <i data-lucide="message-circle"></i>
                         Hablar con un asesor
