--- a/hosting.html
+++ b/hosting.html
@@ -534,7 +534,7 @@
                             Solicitar cotización de hosting
                             <i data-lucide="arrow-right"></i>
                         </a>
-                        <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer"
+                        <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer"
                             class="btn btn-outline btn-lg">
                             <i data-lucide="message-circle"></i>
                             Escribir por WhatsApp
