--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <nav class="nav-desktop" aria-label="Navegación principal">
           <a href="#servicios" class="nav-link">Servicios</a>
-          <a href="hosting.html" class="nav-link">Hosting</a>
+          <a href="/hosting" class="nav-link">Hosting</a>
           <a href="#propuesta" class="nav-link">Por qué elegirnos</a>
           <a href="#proceso" class="nav-link">Proceso</a>
           <a href="#nosotros" class="nav-link">Nosotros</a>
@@ -114,7 +114,7 @@
       >
         <div class="container">
           <a href="#servicios" class="nav-link-mobile">Servicios</a>
-          <a href="hosting.html" class="nav-link">Hosting</a>
+          <a href="/hosting" class="nav-link">Hosting</a>
           <a href="#propuesta" class="nav-link-mobile">Por qué elegirnos</a>
           <a href="#proceso" class="nav-link-mobile">Proceso</a>
           <a href="#nosotros" class="nav-link-mobile">Nosotros</a>
@@ -189,7 +189,7 @@
           </div>
 
           <div class="services-grid">
-          <a href="hosting.html" class="withouta">
+          <a href="/hosting" class="withouta">
             <article class="service-card">
               <div class="service-icon">
                 <i data-lucide="server"></i>
@@ -632,7 +632,7 @@
             <h4 class="footer-title">Servicios</h4>
             <ul>
               <li><a href="#servicios">Hosting Web</a></li>
-              <li><a href="#servicios">Dominios</a></li>
+              <li><a href="/hosting">Dominios</a></li>
               <li><a href="#servicios">Correos Empresariales</a></li>
               <li><a href="#servicios">Desarrollo Web</a></li>
             </ul>
