feat: add js file

--- a/dominios.html
+++ b/dominios.html
@@ -85,7 +85,7 @@
                             Consultar disponibilidad
                             <i data-lucide="arrow-right"></i>
                         </a>
-                        <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer"
+                        <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer"
                             class="btn btn-outline">
                             <i data-lucide="message-circle"></i>
                             Hablar con un asesor
@@ -557,7 +557,7 @@
                                 Solicitar registro de dominio
                                 <i data-lucide="arrow-right"></i>
                             </a>
-                            <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer"
+                            <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer"
                                 class="btn btn-outline btn-lg">
                                 <i data-lucide="message-circle"></i>
                                 Consultar por WhatsApp
@@ -606,7 +606,7 @@
                         <h4>Contacto</h4>
                         <ul>
                             <li>
-                                <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer">
+                                <a href="https://wa.me/++50377926261" target="_blank" rel="noopener noreferrer">
                                     <i data-lucide="message-circle"></i>
                                     WhatsApp
                                 </a>
@@ -628,7 +628,7 @@
         </div>
     </footer>
 
-    <script src="dominios.js"></script>
+    <script src="./js/dominios.js"></script>
 </body>
 
 </html>
