--- a/dominios.html
+++ b/dominios.html
@@ -34,7 +34,7 @@
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="dominios.css">
+    <link rel="stylesheet" href="./css/dominios.css">
 </head>
 
 <body>
