--- a/hosting.html
+++ b/hosting.html
@@ -46,13 +46,13 @@
             </a>
 
             <nav class="nav-desktop" aria-label="Navegación principal">
-                <a href="index.html#servicios">Servicios</a>
-                <a href="index.html#propuesta">Por qué elegirnos</a>
-                <a href="index.html#proceso">Proceso</a>
-                <a href="index.html#nosotros">Nosotros</a>
+                <a href="index.html" class="nav-link">Inicio</a>
+                <a href="/hosting" class="nav-link active">Hosting</a>
+                <a href="/dominios" class="nav-link">Dominios</a>
+                <a href="#nosotros" class="nav-link">Nosotros</a>
             </nav>
 
-            <a href="#contacto-hosting" class="btn btn-primary btn-glow nav-cta">Solicitar cotización</a>
+            <a href="#contacto-hosting" class="btn btn-primary btn-glow nav-cta">Cotizar ahora</a>
 
             <button class="mobile-menu-btn" aria-label="Abrir menú" aria-expanded="false">
                 <i data-lucide="menu" class="menu-icon"></i>
@@ -63,11 +63,14 @@
         <!-- Mobile Navigation -->
         <nav class="nav-mobile hidden" aria-label="Navegación móvil">
             <div class="container">
+                <a href="/index">Inicio</a>
+                <a href="/hosting" class="active">Hosting</a>
+                <a href="/dominios">Dominios</a>
                 <a href="index.html#servicios">Servicios</a>
                 <a href="index.html#propuesta">Por qué elegirnos</a>
                 <a href="index.html#proceso">Proceso</a>
                 <a href="index.html#nosotros">Nosotros</a>
-                <a href="#contacto-hosting" class="btn btn-primary w-full">Solicitar cotización</a>
+              
             </div>
         </nav>
     </header>
