--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
+    
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -77,50 +78,34 @@
     <header class="header" id="header">
       <div class="container header-container">
         <a href="#" class="logo">
-          <div class="logo-icon">DD</div>
+          <div class="logo-icon">D2M</div>
           <span class="logo-text"
             >DEV DOMAIN <span class="text-gradient">MASTERS</span></span
           >
         </a>
 
         <nav class="nav-desktop" aria-label="Navegación principal">
-          <a href="#servicios" class="nav-link">Servicios</a>
-          <a href="hosting.html" class="nav-link">Hosting</a>
-          <a href="#propuesta" class="nav-link">Por qué elegirnos</a>
-          <a href="#proceso" class="nav-link">Proceso</a>
+          <a href="index.html" class="nav-link active">Inicio</a>
+          <a href="/hosting.html" class="nav-link">Hosting</a>
+          <a href="/dominios" class="nav-link">Dominios</a>          
           <a href="#nosotros" class="nav-link">Nosotros</a>
         </nav>
 
-        <a href="#contacto" class="btn btn-primary btn-glow nav-cta"
-          >Solicitar cotización</a
-        >
+        <a href="#contacto" class="btn btn-primary btn-glow nav-cta">Cotizar ahora</a>
 
-        <button
-          class="mobile-menu-btn"
-          id="mobileMenuBtn"
-          aria-label="Abrir menú"
-          aria-expanded="false"
-        >
+        <button  class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Abrir menú" aria-expanded="false">
           <i data-lucide="menu" class="menu-icon"></i>
           <i data-lucide="x" class="close-icon hidden"></i>
         </button>
       </div>
 
       <!-- Mobile Navigation -->
-      <nav
-        class="nav-mobile hidden"
-        id="mobileNav"
-        aria-label="Navegación móvil"
-      >
+      <nav class="nav-mobile hidden" id="mobileNav" aria-label="Navegación móvil">
         <div class="container">
-          <a href="#servicios" class="nav-link-mobile">Servicios</a>
-          <a href="hosting.html" class="nav-link">Hosting</a>
-          <a href="#propuesta" class="nav-link-mobile">Por qué elegirnos</a>
-          <a href="#proceso" class="nav-link-mobile">Proceso</a>
-          <a href="#nosotros" class="nav-link-mobile">Nosotros</a>
-          <a href="#contacto" class="btn btn-primary w-full"
-            >Solicitar cotización</a
-          >
+            <a href="index.html" class="nav-link active">Inicio</a>
+            <a href="/hosting" class="nav-link">Hosting</a>
+            <a href="/dominios" class="nav-link">Dominios</a>
+            <a href="#nosotros" class="nav-link">Nosotros</a>
         </div>
       </nav>
     </header>
