add link whatsapp

--- a/dominios.html
+++ b/dominios.html
@@ -55,7 +55,7 @@
                 <a href="index.html#contacto" class="nav-link">Contacto</a>
             </nav>
 
-            <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer" class="btn btn-primary nav-cta">Cotizar ahora</a>
+            <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer" class="btn btn-primary nav-cta">Cotizar ahora</a>
 
             <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Abrir menú">
                 <i data-lucide="menu" class="menu-icon"></i>
@@ -99,7 +99,7 @@
                             Consultar disponibilidad
                             <i data-lucide="arrow-right"></i>
                         </a>
-                        <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer"
+                        <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer"
                             class="btn btn-outline btn-lg">
                             <i data-lucide="message-circle"></i>
                             Hablar con un asesor
@@ -316,7 +316,7 @@
                                 <span>Cumplimiento con requisitos de SVNet incluido</span>
                             </li>
                         </ul>
-                        <a href="https://wa.me/50370000000" target="_blank" rel="noopener noreferrer"
+                        <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer"
                             class="btn btn-primary btn-glow">
                             Registrar dominio .SV
                             <i data-lucide="arrow-right"></i>
@@ -510,7 +510,7 @@
                         para elegir la mejor opción para tu negocio.
                     </p>
                     <div class="cta-buttons">
-                        <a href="https://wa.me/50370000000?text=Hola,%20quiero%20consultar%20la%20disponibilidad%20de%20un%20dominio"
+                        <a href="https://wa.me/+50377926261?text=Hola,%20quiero%20consultar%20la%20disponibilidad%20de%20un%20dominio"
                             target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-lg btn-glow">
                             <i data-lucide="message-circle"></i>
                             Consultar por WhatsApp
@@ -565,7 +565,7 @@
                     <li>
                         <a href="mailto:hola@devdomainmasters.com">hola@devdomainmasters.com</a>
                     </li>
-                    <li><a href="https://wa.me/50312345678">+503 1234-5678</a></li>
+                    <li><a href="https://wa.me/+50377926261">+503 7792-6261</a></li>
                     <li>San Salvador, El Salvador</li>
                 </ul>
             </div>
