--- a/hosting.html
+++ b/hosting.html
@@ -52,7 +52,7 @@
                 <a href="#nosotros" class="nav-link">Nosotros</a>
             </nav>
 
-            <a href="#contacto-hosting" class="btn btn-primary btn-glow nav-cta">Cotizar ahora</a>
+            <a  href="https://wa.me/+50377926261" target="_blank" class="btn btn-primary btn-glow nav-cta">Cotizar ahora</a>
 
             <button class="mobile-menu-btn" aria-label="Abrir menú" aria-expanded="false">
                 <i data-lucide="menu" class="menu-icon"></i>
