improve styles and url

--- a/dominios.html
+++ b/dominios.html
@@ -43,16 +43,15 @@
     <header class="header" id="header">
         <div class="container header-container">
             <a href="index.html" class="logo">
-                <div class="logo-icon">DDM</div>
-                <span class="logo-text">Dev Domain Masters</span>
+                <div class="logo-icon">D2M</div>
+                <span class="logo-text">DEV DOMAIN <span class="text-gradient">MASTERS</span></span>
             </a>
 
             <nav class="nav-desktop">
                 <a href="index.html" class="nav-link">Inicio</a>
-                <a href="dominios.html" class="nav-link active" >Dominios</a>
                 <a href="hosting.html" class="nav-link">Hosting</a>
-                <a href="index.html#servicios" class="nav-link">Servicios</a>
-                <a href="index.html#contacto" class="nav-link">Contacto</a>
+                <a href="dominios.html" class="nav-link active" >Dominios</a>
+                <a href="dominios.html#nosotros" class="nav-link">Nosotros</a>
             </nav>
 
             <a href="https://wa.me/+50377926261" target="_blank" rel="noopener noreferrer" class="btn btn-primary nav-cta">Cotizar ahora</a>
