--- a/index.html
+++ b/index.html
@@ -75,19 +75,18 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header" id="header">
+    <header class="header">
       <div class="container header-container">
         <a href="#" class="logo">
           <div class="logo-icon">D2M</div>
-          <span class="logo-text"
-            >DEV DOMAIN <span class="text-gradient">MASTERS</span></span
+          <span class="logo-text">DEV DOMAIN <span class="text-gradient">MASTERS</span></span
           >
         </a>
 
         <nav class="nav-desktop" aria-label="Navegación principal">
           <a href="index.html" class="nav-link active">Inicio</a>
-          <a href="/hosting.html" class="nav-link">Hosting</a>
-          <a href="/dominios" class="nav-link">Dominios</a>          
+          <a href="hosting.html" class="nav-link">Hosting</a>
+          <a href="dominios.html" class="nav-link">Dominios</a>          
           <a href="#nosotros" class="nav-link">Nosotros</a>
         </nav>
 
@@ -103,8 +102,8 @@
       <nav class="nav-mobile hidden" id="mobileNav" aria-label="Navegación móvil">
         <div class="container">
             <a href="index.html" class="nav-link active">Inicio</a>
-            <a href="/hosting" class="nav-link">Hosting</a>
-            <a href="/dominios" class="nav-link">Dominios</a>
+            <a href="hosting.html" class="nav-link">Hosting</a>
+            <a href="dominios.html" class="nav-link">Dominios</a>
             <a href="#nosotros" class="nav-link">Nosotros</a>
         </div>
       </nav>
