--- a/hosting.html
+++ b/hosting.html
@@ -41,14 +41,14 @@
     <header class="header">
         <div class="container header-content">
             <a href="index.html" class="logo">
-                <div class="logo-icon">DD</div>
+                <div class="logo-icon">D2M</div>
                 <span class="logo-text">DEV DOMAIN <span class="text-gradient">MASTERS</span></span>
             </a>
 
             <nav class="nav-desktop" aria-label="Navegación principal">
                 <a href="index.html" class="nav-link">Inicio</a>
                 <a href="/hosting" class="nav-link active">Hosting</a>
-                <a href="/dominios" class="nav-link">Dominios</a>
+                <a href="dominios.html" class="nav-link">Dominios</a>
                 <a href="#nosotros" class="nav-link">Nosotros</a>
             </nav>
 
@@ -82,9 +82,10 @@
             <div class="hero-glow hero-glow-2"></div>
 
             <div class="container hero-content">
-                <h1>Hosting Profesional en El Salvador para <span class="text-gradient">Empresas y Emprendedores</span>
+                <h1 class="hero-title">Hosting Profesional en El Salvador para <span class="text-gradient">Empresas y Emprendedores</span>
                 </h1>
 
+                
                 <p class="hero-subtitle">
                     Servidores web rápidos, confiables y seguros con soporte técnico real en español.
                     Tu sitio web siempre disponible con 99.9% de uptime garantizado y respaldo técnico local.
