--- a/dominios.html
+++ b/dominios.html
@@ -65,11 +65,10 @@
         <!-- Mobile Menu -->
         <nav class="nav-mobile hidden" id="nav-mobile">
             <div class="container">
-                <a href="index.html" class="nav-link-mobile">Inicio</a>
-                <a href="dominios.html" class="nav-link-mobile active">Dominios</a>
-                <a href="hosting.html" class="nav-link-mobile">Hosting</a>
-                <a href="index.html#servicios" class="nav-link-mobile">Servicios</a>
-                <a href="index.html#contacto" class="nav-link-mobile">Contacto</a>
+                <a href="/index" class="nav-link-mobile">Inicio</a>
+                <a href="/hosting" class="nav-link-mobile">Hosting</a>                
+                <a href="/dominios" class="nav-link-mobile active">Dominios</a>
+                <a href="/index#contacto" class="nav-link-mobile">Contacto</a>
                 
             </div>
         </nav>
