--- a/hosting.html
+++ b/hosting.html
@@ -46,9 +46,9 @@
             </a>
 
             <nav class="nav-desktop" aria-label="Navegación principal">
-                <a href="index.html" class="nav-link">Inicio</a>
+                <a href="/index" class="nav-link">Inicio</a>
                 <a href="/hosting" class="nav-link active">Hosting</a>
-                <a href="dominios.html" class="nav-link">Dominios</a>
+                <a href="/dominios" class="nav-link">Dominios</a>
                 <a href="#nosotros" class="nav-link">Nosotros</a>
             </nav>
 
@@ -65,10 +65,7 @@
             <div class="container">
                 <a href="/index">Inicio</a>
                 <a href="/hosting" class="active">Hosting</a>
-                <a href="/dominios">Dominios</a>
-                <a href="index.html#servicios">Servicios</a>
-                <a href="index.html#propuesta">Por qué elegirnos</a>
-                <a href="index.html#proceso">Proceso</a>
+                <a href="/dominios">Dominios</a>             
                 <a href="index.html#nosotros">Nosotros</a>
               
             </div>
