--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         </a>
 
         <nav class="nav-desktop" aria-label="Navegación principal">
-          <a href="index.html" class="nav-link active">Inicio</a>
-          <a href="hosting.html" class="nav-link">Hosting</a>
-          <a href="dominios.html" class="nav-link">Dominios</a>          
+          <a href="/index" class="nav-link active">Inicio</a>
+          <a href="/hosting" class="nav-link">Hosting</a>
+          <a href="/dominios" class="nav-link">Dominios</a>          
           <a href="#nosotros" class="nav-link">Nosotros</a>
         </nav>
 
@@ -101,9 +101,9 @@
       <!-- Mobile Navigation -->
       <nav class="nav-mobile hidden" id="mobileNav" aria-label="Navegación móvil">
         <div class="container">
-            <a href="index.html" class="nav-link active">Inicio</a>
-            <a href="hosting.html" class="nav-link">Hosting</a>
-            <a href="dominios.html" class="nav-link">Dominios</a>
+            <a href="/index" class="nav-link active">Inicio</a>
+            <a href="/hosting" class="nav-link">Hosting</a>
+            <a href="/dominios" class="nav-link">Dominios</a>
             <a href="#nosotros" class="nav-link">Nosotros</a>
         </div>
       </nav>
