--- a/dominios.html
+++ b/dominios.html
@@ -36,6 +36,11 @@
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./css/dominios.css">
+    <link rel="icon" type="image/png" href="assets/icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/icon/favicon.svg" />
+    <link rel="shortcut icon" href="assets/icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/icon/site.webmanifest" />
 </head>
 
 <body>
