--- a/hosting.html
+++ b/hosting.html
@@ -31,6 +31,11 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="hosting.css">
+    <link rel="icon" type="image/png" href="assets/icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/icon/favicon.svg" />
+    <link rel="shortcut icon" href="assets/icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/icon/site.webmanifest" />
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
