--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
     <!-- Header -->
     <header class="header">
       <div class="container header-container">
-        <a href="#" class="logo">
-          <div class="logo-icon">D2M</div>
-          <span class="logo-text">DEV DOMAIN <span class="text-gradient">MASTERS</span></span
-          >
+        <a href="#" >
+          <img src="assets/d5m.png" alt="" class="logo-header">
+          
         </a>
 
         <nav class="nav-desktop" aria-label="Navegación principal">
