--- a/hosting.html
+++ b/hosting.html
@@ -45,9 +45,8 @@
     <!-- Header -->
     <header class="header">
         <div class="container header-content">
-            <a href="index.html" class="logo">
-                <div class="logo-icon">D2M</div>
-                <span class="logo-text">DEV DOMAIN <span class="text-gradient">MASTERS</span></span>
+            <a href="/index">
+                <img src="assets/d5m.png" alt="" class="logo-header">
             </a>
 
             <nav class="nav-desktop" aria-label="Navegación principal">
