adding logo page dominios

--- a/dominios.html
+++ b/dominios.html
@@ -47,9 +47,8 @@
     <!-- Header -->
     <header class="header" id="header">
         <div class="container header-container">
-            <a href="index.html" class="logo">
-                <div class="logo-icon">D2M</div>
-                <span class="logo-text">DEV DOMAIN <span class="text-gradient">MASTERS</span></span>
+            <a href="/index">
+                <img src="assets/d5m.png" alt="" class="logo-header">
             </a>
 
             <nav class="nav-desktop">
