update logo svg

--- a/hosting.html
+++ b/hosting.html
@@ -46,7 +46,7 @@
     <header class="header">
         <div class="container header-content">
             <a href="/index">
-                <img src="assets/d5m.png" alt="" class="logo-header">
+                <img src="assets/logoddm.svg" alt="" class="logo-header">
             </a>
 
             <nav class="nav-desktop" aria-label="Navegación principal">
