--- a/dominios.html
+++ b/dominios.html
@@ -48,7 +48,7 @@
     <header class="header" id="header">
         <div class="container header-container">
             <a href="/index">
-                <img src="assets/d5m.png" alt="" class="logo-header">
+                <img src="assets/logoddm.svg" alt="" class="logo-header">
             </a>
 
             <nav class="nav-desktop">
