update logo svg

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <!-- Header -->
     <header class="header">
       <div class="container header-container">
-        <a>
-          <img src="assets/d5m.png" alt="" class="logo-header">          
+        <a href="/index">
+          <img src="assets/logoddm.svg" alt="" class="logo-header">
         </a>
 
         <nav class="nav-desktop" aria-label="Navegación principal">
