--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="twitter:site" content="@DevDomainMasters" />
 
     <!-- Fonts -->   
-    <link rel="preload" href="assets/fonts/inter-800.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="assets/fonts/inter-v20-latin-800.woff2" as="font" type="font/woff2" crossorigin />
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest" defer></script>
