fix logo header

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <header class="header">
       <div class="container header-container">
        <a href="/index" aria-label="Inicio - Dev Domain Masters">
-          <img src="assets/logoddm.svg" alt="Dev Domain Masters">
+          <img src="assets/logoddm.svg" alt="Dev Domain Masters" class="logo-header">
         </a>
 
 
