--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         "areaServed": "SV"
     }
     </script>
-  
-    <!-- ⚠️ Eliminar CDN de Lucide -->
-    <!-- Mejor: usar SVG inline o archivo local defer -->
+  <script src="assets/js/lucide.min.js" defer></script>
+
+   
   </head>
 
 
